tests/compile_fail/async_fn.stderr
error: live-prop-test doesn't support testing async fn items
 --> $DIR/async_fn.rs:4:1
  |
4 | async fn five() -> i32 {
  | ^^^^^
